--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,19 @@
-/*
- *= require_tree .
- *= require_self
- */
+// リセットCSS
+@import "config/reset";
+// 共通色など
+@import "config/variable";
+// 共通CSS
+@import "config/common";
+// font-awesome
+@import "font-awesome";
+
+@import "module/shared/header_footer";
+@import "module/shared/flash";
+
+@import "module/user/signup_login";
+@import "module/user/mypage";
+@import "module/user/show_user";
+
+@import "module/book/book_show";
+@import "module/book/book_index";
+@import "module/book/book_new_edit"
